<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.DetailFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street"
        android:textSize="16sp"
        android:padding="5dp"
        android:textColor="#000000"

        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_suite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suite"
        android:textColor="#000000"
        android:textSize="16sp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_street"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="16sp"
        android:textColor="#000000"

        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_suite"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zipcode"
        android:textSize="16sp"
        android:textColor="#000000"

        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_city"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="@id/tv_id"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintBottom_toBottomOf="@id/tv_id"
        app:cardElevation="10dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        android:layout_gravity="center"


        >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_geo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/location"
        />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textSize="16sp"
        android:padding="5dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/tv_zipcode"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/companyName"
        android:textSize="16sp"
        android:textColor="#000000"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_website"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_catchPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catchPhrase"
        android:textSize="16sp"
        android:padding="5dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/tv_companyName"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bs"
        android:textSize="16sp"
        android:textColor="#000000"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_catchPhrase"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_baseline_person_24"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />
    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/id"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        android:layout_marginTop="6dp" />

        <!-- User Name -->
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/name"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/tv_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/user_name"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/Phone"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/tv_userName"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            android:layout_marginTop="8dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>

